Fixed backface visibility by making it ff only.
chrome behaves better with the attribute removed but firefox requires it

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ img {
   left: 0;
   right: 0;
   margin: auto;
-  backface-visibility: hidden;
 }
 
 .app {
@@ -79,7 +78,6 @@ h1 {
 }
 
 /* Flip Activator */
-/* .flip-card:hover  */
 .flip .flip-card-inner {
   transform: rotateY(180deg);
 }
@@ -89,9 +87,8 @@ h1 {
   position: absolute;
   width: 100%;
   height: 100%;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+  -moz-backface-visibility: hidden;
 }
 
 /* Style the front side (fallback if image is missing) */
